<resources>
    <string name="app_name">Vistony Sales Force</string>
    <string name="app_fragment_Parametro" translatable="false">Parametros</string>
    <string name="title_activity_menu_view" translatable="false">MenuView</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">V001</string>
    <string name="nav_header_subtitle" translatable="false">VENDEDOR 01</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="add" translatable="false">Buscar</string>
    <string name="tag_select" translatable="true">&lt;SELECCIONAR&gt;</string>
    <string name="UR" translatable="false">Pago Adelantado</string>
    <string name="CHK" translatable="false">Cheque</string>
    <string name="generar" translatable="false">Generar_PDF</string>
    <string name="save" translatable="false">Guardar</string>
    <string name="validar_qr" translatable="false">Validar_QR</string>
    <string name="actualizar" translatable="false">Actualizar</string>
    <string name="abrir" translatable="false">Abrir</string>
    <string name="TomarFoto" translatable="false">TomarFoto</string>
    <string name="FechaCheque" translatable="false">F.CHEQUE</string>
    <string name="CantidadParametro" translatable="false">Cantidad</string>
    <string name="NombreParametro" translatable="false">Nombre</string>
    <string name="FechaParametro" translatable="false">Fecha</string>
    <string name="LogoPrincipal" translatable="false">LogoPrincipal</string>
    <string name="PerfilPrincipal" translatable="false">PerfilPrincipal</string>
    <string name="CompaniaPrincipal" translatable="false">CompaniaPrincipal</string>
    <string name="UsuarioPrincipal" translatable="false">UsuarioPrincipal</string>
    <string name="BotonPrincipalLogin">Iniciar sesión</string>
    <string name="VersionLogin" translatable="false">Version 1.1.6</string>
    <string name="DeudaDrawer" translatable="true">Cliente</string>
    <string name="DepositoDrawer" translatable="false">Depósito</string>
    <string name="RutaVendedorDrawer" translatable="false">Ruta Vendedor</string>
    <string name="ConsultaDepositoDrawer" translatable="false">Consulta Depósito</string>
    <string name="ConsultaCobradoDrawer" translatable="false">Consulta Cobrado</string>
    <string name="ParametrosDrawer" translatable="true">Parametros</string>
    <string name="ConfiguracionImpresoraDrawer" translatable="false">Configuracion Impresora</string>
    <string name="ConfiguracionSistemaDrawer" translatable="true">Configuracion Sistema</string>
    <string name="AvanceVentasDrawer" translatable="false">Avance Ventas</string>
    <string name="SalirDrawer">Salir</string>
    <string name="CobranzaCabeceraN" translatable="false">N°</string>
    <string name="DepositoDirecto" translatable="false">Depósito Directo</string>
    <string name="DeleteCajaChica" translatable="false">Eliminar BD - Caja Chica</string>
    <string name="HojaDespachoView" translatable="true">Hoja Despacho</string>
    <string name="DineroCobradoView" translatable="false">Dinero Cobrado</string>
    <string name="AsistenciaCamionView" translatable="false">Camion</string>
    <string name="clearTemp" translatable="false">Liberar espacio</string>
    <string name="EnablePrint">Habilitar Impresora</string>
    <string name="LineUsed">Linea Utilizada</string>
    <string name="LineCredit">Línea de Crédito</string>
    <string name="quotation">Cotización</string>
    <string name="lbl_orderhed_payterms">TÉRMINO DE PAGO</string>
    <string name="lbl_code">Código</string>
    <string name="lbl_gallon">Gallon</string>
    <string name="lbl_promotion">Promoción:</string>
    <string name="Promotion_Summary">Resumen Promoción</string>
    <string name="Selected_Promotion">Promoción Seleccionada:</string>
    <string name="Pending_Promotion">Promoción Pendiente:</string>
    <string name="Promotion_Detail">Detalle Promoción</string>
    <string name="Direct_Depost">Déposito Directo</string>
    <string name="Find_Deposit">Consulta Depósito</string>
    <string name="lbl_update_parameters">Actualizar Parámetros</string>
    <string name="lbl_legalnumber">Documento</string>
    <string name="lbl_invoicedate">Fecha Emision</string>
    <string name="lbl_duedate">Fecha Vencimiento</string>
    <string name="lbl_DocAmount">Importe</string>
    <string name="lbl_balance">Saldo</string>
    <string name="lbl_kardex_of_payment">Kardex de Pago</string>
    <string name="lbl_chk_pedido">Orden Venta</string>
    <string name="lbl_type_generate_document_pdf">Generar PDF</string>
    <string name="lbl_type_send_sms">Enviar SMS</string>
    <string name="lbl_type_validate_document_pdf">Validar PDF</string>
    <string name="lbl_type_validate_SMS">Validar SMS</string>
    <string name="lbl_tittle_dialog_validate_SMS">VALIDAR SMS</string>
    <string name="lbl_dialog_code_SMS">Codigo SMS:</string>
    <string name="lbl_dispatch_date">Fecha Entrega:</string>
    <string name="lbl_address">Fecha Entrega:</string>
    <string name="lbl_chk_geolocation">Geolocalización</string>
    <string name="lbl_route_sales_count_geolocation">Clientes Geolocalizados</string>
    <string name="lbl_menu_action_update_client_geolocation">Actualizar Datos Cliente</string>
    <string name="lbl_menu_action_visit_section">Tramo Visita</string>
    <string name="lbl_layout_visit_section_start">Inicio Tramo</string>
    <string name="lbl_layout_visit_section_finish">Final Tramo</string>
    <string name="lbl_layout_client_head_visitsection">Duracion Visita</string>
    <string name="lbl_find_stock_all_warehouse">Almacenes</string>
    <string name="lbl_find_stock_all_warehouse_code">Código</string>
    <string name="lbl_find_stock_all_warehouse_stock">Stock</string>
    <string name="lbl_find_stock_all_warehouse_branch">Sucursal</string>
    <string name="lbl_warehouses_count">Cantidad</string>
    <string name="lbl_warehouses_amount">Monto</string>
    <string name="lbl_historic_status_dispatch_delivery">Entrega</string>
    <string name="lbl_historic_status_dispatch_type">Tipo</string>
    <string name="lbl_historic_status_dispatch_reason">Motivo</string>
    <string name="lbl_historic_status_dispatch_photo">Foto</string>
    <string name="lbl_cheque">Cheque</string>
    <string name="lbl_deferred_date">Fecha Diferida</string>
    <string name="lbl_find_dispatch">Consulta Despachos</string>
    <string name="lbl_day_route">Día Ruta</string>
    <string name="lbl_sales_of_class_commerce">Venta por Clase Commercial</string>
    <string name="lbl_btn_get">Consultar</string>
    <string name="lbl_class_commercial">Clase Comercial</string>
    <string name="lbl_quote">Cuota</string>
    <string name="lbl_advance_percent">% Avance</string>
    <string name="lbl_prom_trim_anio_actual">Prom Trim</string>
    <string name="lbl_prom_percent">Prom%</string>
    <string name="lbl_month_before_year_before">Mes Antes</string>
    <string name="lbl_percent_month_before_year_before">21/22</string>
    <string name="lbl_indicator_month_before">Anterior</string>
    <string name="lbl_indicator_biannual">Semestral</string>
    <string name="lbl_indicator_percent_quota">Cuota</string>
    <string name="lbl_formula">Formula</string>
    <string name="lbl_variable1">Variable1</string>
    <string name="lbl_variable2">Variable2</string>
    <string name="lbl_resultado">Resultado</string>
    <string name="lbl_edit_signature">Editar Firma</string>
    <string name="lbl_percent">%</string>
    <string name="lbl_money_charged">Dinero Cobrado</string>
    <string name="lbl_amount_charged">Monto Cobrado</string>
    <string name="lbl_amount_reported">Monto Reportado</string>
    <string name="lbl_number_transaction">N° Operacion</string>
    <string name="lbl_currency">Moneda</string>
    <string name="lbl_currency_type">Tipo</string>
    <string name="lbl_currency_unit">Unidad</string>
    <string name="lbl_distpatch_route">Total Programados</string>
    <string name="lbl_status_distpatch">Total Despachados</string>
    <string name="lbl_status">Estado</string>
    <string name="lbl_send">Enviar</string>
    <string name="lbl_find_quotation">Consulta Cotizacion</string>
    <string name="lbl_item">Item</string>
    <string name="lbl_information_client">Datos de Cliente</string>
    <string name="lbl_create_visit">Generar Visita</string>
    <string name="lbl_chk_collecion">Cobranza</string>
    <string name="lbl_total_collection">Total Cobranza</string>
    <string name="lbl_total_debt">Total Deuda</string>
    <string name="lbl_delivery">Entrega</string>
    <string name="lbl_dispatch">Despacho</string>
    <string name="lbl_ocurrencies">Ocurrencia</string>
    <string name="lbl_drivername">Nombre Chofer</string>
    <string name="lbl_drivemobile">Telefono Chofer</string>
    <string name="lbl_find_geolocation">Geolocalizacion enviada</string>
    <string name="lbl_date_register">Fecha Registro</string>
    <string name="lbl_dispatch_pending">Pendientes</string>
    <string name="lbl_dispatch_failed">Fallidos</string>
    <string name="lbl_dispatch_sucessfull">Exitosos</string>
    <string name="lbl_date_dispatch">Fecha Despacho</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="AddCliente" translatable="false">Sugerencia Cliente</string>
    <string name="conectado">Conectando...</string>
    <string name="sinInfo">Sin Información</string>
    <string name="Ingresando">Ingresando...</string>
    <string name="ficha_tecnica">Ficha Técnica</string>
    <string name="reclamo_clientes">Reclamo de Clientes</string>
    <string name="lead_cliente">Lead Generation</string>
    <string name="title_activity_maps">Map</string>
    <string name="razon_social">Razón Social</string>
    <string name="ruc">RUC</string>
    <string name="nombre_comercial">Tradename</string>
    <string name="numero_telefono">Phone Number</string>
    <string name="numero_celular">Cell phone number</string>
    <string name="persona_contacto">Contact person</string>
    <string name="email">Email</string>
    <string name="web">Web</string>
    <string name="coordenadas">Coordinates...</string>
    <string name="comentario">Comment</string>
    <string name="enviar_lead">Send lead</string>
    <string name="head_codigo">Code</string>
    <string name="head_usuario">User</string>
    <string name="menu_configuracion">Setting</string>
    <string name="menu_formulario">Form</string>
    <string name="menu_salir">Exit</string>
    <string name="head_conexion">Connection</string>
    <string name="head_secuencia">Sequence</string>
    <string name="menu_ruta_vendedor">Seller route</string>
    <string name="menu_deposito">Deposit</string>
    <string name="menu_consultas">Inquiries</string>
    <string name="menu_comisiones">Commissions</string>
    <string name="dialog_advertencia">Warning</string>
    <string name="dialog_btn_salir">Exit</string>
    <string name="dialog_btn_cancelar">Annuler
</string>
    <string name="dialog_text">Are you sure to exit the application?</string>
    <string name="menu_tag">Opciones del sistema</string>
    <string name="quantity">Cantidad</string>
    <string name="amount">Monto</string>
    <string name="client">Cliente</string>
    <string name="umd">UMD</string>
    <string name="code">Código</string>
    <string name="article">Producto</string>
    <string name="delivery">Entrega</string>
    <string name="payment_terms">Cond. Venta</string>
    <string name="price">Precio</string>
    <string name="invoice">Factura</string>
    <string name="id">ID</string>
    <string name="pack">Pack</string>
    <string name="lines">Lineas</string>
</resources>