<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?attr/listPreferredItemHeight"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="8dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="8dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/lbl_orden_venta_ERP_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textAppearance="?attr/textAppearanceListItem"/>

        <TextView
            android:id="@+id/tv_historico_facturas_orden_venta_ERP_id"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:text="@string/code"
            android:textAppearance="?attr/textAppearanceListItem" />
    </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/lbl_rucdnni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ruc"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/tv_historico_facturas_rucdnni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:text="@string/ruc"
                android:textAppearance="?attr/textAppearanceListItem"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/lbl_nombrecliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/client"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/tv_historico_facturas_nombrecliente"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:text="@string/client"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textStyle="bold" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/lbl_cond_venta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_terms"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/tv_cond_venta"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/payment_terms"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textStyle="bold" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/lbl_monto_orden_venta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/tv_historico_facturas_monto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:textStyle="bold"
                android:text="@string/amount"
                android:textAppearance="?attr/textAppearanceListItem" />

        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/lbl_historico_facturas_reparto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="125dp"
        android:text="@string/delivery"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceListItem" />

    <ImageView
        android:id="@+id/imv_historico_facturas_despacho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="150dp"
        app:srcCompat="@mipmap/camion_reparto_64" />

    <TextView
        android:id="@+id/lbl_historico_facturas_facturacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="125dp"
        android:text="@string/invoice"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceListItem" />

    <ImageView
        android:id="@+id/imv_historico_orden_venta_facturacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="150dp"
        app:srcCompat="@mipmap/factura_64" />

</RelativeLayout>