<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:minHeight="?attr/listPreferredItemHeight"
    android:orientation="vertical"
    android:id="@+id/relativeListaProducto"
    >

    <TextView
        android:id="@+id/lbl_id_promocion_detalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/code"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/tv_id_promocion_detalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="0dp"
        android:text="@string/code"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceListItem" />
    <TextView
        android:id="@+id/lbl_producto_promocion_detalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/article"
        android:textAppearance="?attr/textAppearanceListItem" />
    <TextView
        android:id="@+id/tv_producto_promocion_detalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/article"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/lbl_cant_producto_promocion_detalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="0dp"
        android:text="@string/quantity"
        android:textAppearance="?attr/textAppearanceListItem" />
    <TextView
        android:id="@+id/tv_cant_producto_promocion_detalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="0dp"
        android:textStyle="bold"
        android:text="@string/quantity"
        android:textAppearance="?attr/textAppearanceListItem" />
    <TextView
        android:id="@+id/lbl_cant_producto_promocion_umd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="0dp"
        android:text="@string/umd"
        android:textAppearance="?attr/textAppearanceListItem"/>
    <TextView
        android:id="@+id/tv_cant_producto_promocion_umd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="270dp"
        android:layout_marginTop="0dp"
        android:textStyle="bold"
        android:text="@string/umd"
        android:textAppearance="?attr/textAppearanceListItem"
        />

</RelativeLayout>