<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    android:id="@+id/relativeListaProducto"
    >

    <TextView
        android:id="@+id/lbl_orden_venta_detalle_lista_promocion_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/id"
        android:textAppearance="?attr/textAppearanceListItem" />
    <TextView
        android:id="@+id/tv_orden_venta_detalle_lista_promocion_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:text="@string/id"
        android:textAppearance="?attr/textAppearanceListItem"
        />

    <TextView
        android:id="@+id/lbl_orden_venta_detalle_lista_promocion_promocion_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="0dp"
        android:text="@string/pack"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/tv_orden_venta_detalle_lista_promocion_promocion_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="0dp"
        android:text="@string/pack"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/lbl_orden_venta_detalle_lista_promocion_cantidad_promocion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="0dp"
        android:text="@string/quantity"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/tv_orden_venta_detalle_lista_promocion_cantidad_promocion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="0dp"
        android:text="@string/quantity"
        android:textAppearance="?attr/textAppearanceListItem" />
    <TextView
        android:id="@+id/lbl_orden_venta_detalle_lista_promocion_preciobase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/price"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/tv_orden_venta_detalle_lista_promocion_preciobase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/price"
        android:textAppearance="?attr/textAppearanceListItem" />
    <TextView
        android:id="@+id/lbl_orden_venta_detalle_lista_promocion_cantidad_linas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/lines"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/tv_orden_venta_detalle_lista_promocion_cantidad_linas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/lines"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/lbl_orden_venta_detalle_lista_promocion_porcentaje_descuento"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="20dp"
        android:text="% Dcto:"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/tv_orden_venta_detalle_lista_promocion_porcentaje_descuento"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="%"
        android:textAppearance="?attr/textAppearanceListItem" />


</RelativeLayout>